fixing the hero image bug on mobile

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -20,12 +20,12 @@
         &-1, &-2, &-3 {
             background-size: cover;
             background-position: center;
-            // background-attachment: fixed;
+            background-attachment: fixed;
             @supports (clip-path: polygon(0 0, 0 0, 0 0, 0 0)) {
                 clip-path: polygon(0 0, 100% 0, 100% 85%, 74% 100%, 0 85%, 0% 50%);
             }
 
-            @supports (-webkit-overflow-scrolling: touch) {
+            @media screen and (hover: none) {
                 background-attachment: scroll;
             }
         }
